risk-engine/tests/snapshots/golden__g_redis_degraded_non_sensitive_allows.snap
---
source: tests/golden.rs
expression: "run(\"redis_degraded_non_sensitive_allows\", ctx).await"
---
scenario: redis_degraded_non_sensitive_allows
decision: Allow
score: 5
base_score: 5
adjusted_score: 5
required_action: None
hold_reason: None
triggered_gates: []
escalated: false
signals_degraded: true
lock_account: false
notify_user: false
notify_admin: false
breakdown: D=5 S=0 N=0 B=0 C=0 base=5 m_action=1.00 m_org=1.00 a=0 final=5
top_factors:
  - name: headless_ua  component: Device  contribution: 5
triggered_rules: ["headless_ua"]
